# DeepFlow

./: .gitignore  ASTRA_TEST_PLAN.md  CLAUDE.md  FLATTEN.md  GD_search.py  LLM_time_results.txt  LLM_util.py  PLAN.md  README  README.md  Transformer_breakdown_results.txt  arch_GD_search_2.py  area.py  astra_comparison.py  astra_test.py  astrasim_integration.py  cache.py  collect.sh  config.py  deepflow-flame.json  deviceMapping.py  dist_gemm_tf2.py  energy.py  hw_component.py  launch-lm-prediction.py  main.py  model.py  netlist.lef  parallelism.py  perf.py  perf_modes.py  pyproject.toml  requirements.txt  run.sh  run_perf.py  run_perf_llmtest.py  simulate.py  simulate_LLM.py  test.py  tile.py  (+7 more)
Examples/: example1  example2  example3
astrasim_lib/: __init__.py  bootstrap.py  comparison.py  config_generation.py  et_utils.py  integration.py
case_study/arch_search/energy_per_flop/: analyze-parallelism.py
case_study/arch_search2/: tech-node-scaling.py
case_study/perf_model/: collect_flop.py  collect_xbit.py  energy_per_flop.py  energy_per_membit.py
case_study/perf_model/energy_per_flop/: collect.py  energy_per_flop.csv
case_study/perf_model/energy_per_membit/: collect.py  energy_per_membit.csv
case_study/perf_model/siif-energy_per_flop/: collect_flop.py
configs/: exp_config.yaml  exp_config_10nm.yaml  exp_config_2.yaml  exp_config_CoWoS_nextgen.yaml  exp_config_CoWoS_nextgen_10nm.yaml  exp_config_CoWoS_nextgen_MRAM.yaml  exp_config_MCM.yaml  exp_config_MCM_10nm.yaml  exp_config_SiIF.yaml  exp_config_SiIF_10nm.yaml  exp_config_advanced_logic2x.yaml  exp_config_advanced_logic4x.yaml  v100.yaml
configs/configs_Mar_20/: exp_config_CoWoS_nextgen_DRAM0.5xenergy.yaml  exp_config_CoWoS_nextgen_layers2x.yaml  exp_config_CoWoS_nextgen_layers2x_DRAM0.5x.yaml  exp_config_DRAM0.5xenergy.yaml  exp_config_MCM_DRAM0.5xenergy.yaml  exp_config_MCM_layers2x.yaml  exp_config_MCM_layers2x_DRAM0.5x.yaml  exp_config_SiIF_DRAM0.5xenergy.yaml  exp_config_SiIF_layers2x.yaml  exp_config_SiIF_layers2x_DRAM0.5x.yaml  exp_config_layers2x.yaml  exp_config_layers2x_DRAM0.5x.yaml
configs/hardware-config/: H100_SXM5_80GB.yaml  a100_80GB.yaml  a100_80GB_tp.yaml  exp_config_new.yaml  exp_config_new_MCM.yaml  test.yaml  v100.yaml  waferscale_20v100_80hbm.yaml
configs/model-config/: GEMM.yaml  LLM.yaml  LSTM.yaml  Transformer.yaml
configs/new-configs/: a100_80GB.yaml  exp_config_new.yaml  exp_config_new_MCM.yaml  test.yaml  v100.yaml  v100_new.yaml  v100_no_frac.yaml  waferscale_20v100_80hbm.yaml
configs/old-configs/: exp_config_CoWoS_nextgen_DRAM0.5xenergy.yaml  exp_config_CoWoS_nextgen_layers2x.yaml  exp_config_DRAM0.5xenergy.yaml  exp_config_MCM_layers2x.yaml  exp_config_SiIF_DRAM0.5xenergy.yaml  exp_config_SiIF_layers2x.yaml  exp_config_SiIF_layers2x_DRAM0.5x.yaml  exp_config_layers2x_DRAM0.5x.yaml
configs/old-configs-Aug2023/: exp_config.yaml  exp_config_10nm.yaml  exp_config_CoWoS_nextgen_10nm.yaml  p4.yaml  v100.yaml
helper/: launch-distGEMM-prediction.py  launch-distGEMM-profile.py  launch-lm-execution.py
helper/arch_search_scripts/: launch-all.py  launch-energy_per_flop_arch_search.py  launch-model-noramlized-volta.py  launch-model.py  launch-newTech.py  launch-power.py  launch-scale.py  launch-singles.py  launch-technology.py  launch-vdd.py  launch.py
helper/perf_model_scripts/: energy_per_flop.py  energy_per_membit.py  energy_per_xbit.py
helper/validation_scripts/: launch-distGEMM-execution.py  launch-distGEMM-prediction.py  launch-lm-profile.py
orion3/: CLKCTRL.c  CLKCTRL.h  INBUF.c  INBUF.h  KG.m  KG.sh  LSQR.m  LSQR.sh  MARS.m  MARS.sh  Makefile  NONPR.c  NONPR.h  OUTBUF.c  OUTBUF.h  RBF.m  RBF.sh  README  SIM_ALU.c  SIM_ALU.h  SIM_arbiter.c  SIM_arbiter.h  SIM_array.h  SIM_array_l.c  SIM_array_m.c  SIM_cam.c  SIM_clock.c  SIM_clock.h  SIM_crossbar.c  SIM_crossbar.h  SIM_link.c  SIM_link.h  SIM_misc.c  SIM_parameter.h  SIM_permu.c  SIM_permu.h  SIM_port.h  SIM_reg.c  SIM_reg.h  SIM_router.c  (+42 more)
orion3/libsvm-3.12/libsvm-3.12/: FAQ.html
orion3/rbf2/: INSTALL.txt  NOTES.txt
orion3/rbf2/delve-1.1p3/delve-1.1p3/: CHANGES  Makefile.in  README  configure  configure.in  delve.h  delveAnova.c  delveAppInit.c  delveAttr.c  delveMatrix.c  delveRandom.c  delveStats.c  install-sh  patchlevel.h  todo
orion3/rbf2/delve-1.1p3/delve-1.1p3/doc/: GetMatrix.tex  Makefile.in  appA.tex  appB.tex  appC.tex  appD.tex  d_attr.tex  d_matrix.tex  d_random.tex  dd.eps  dd.fig  delvesh.tex  manual.ps  manual.tex  manual2.ps  mystyle.sty  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex  sec8.tex
orion3/rbf2/delve-1.1p3/delve-1.1p3/tests/: README  all  copyright  d_attr.test  d_matrix.test  d_random.test  defs  license.terms  range.test
orion3/rbf2/delve-1.1p3/delve-1.1p3/utils/: dgenorder  dgenproto  dinfo  dls  dmore  mgendata  mgendir  minfo  mloss  mls  mmore  mstats
orion3/rbf2/demo/: Contents.m  demo_get_data.m  demo_rbf_fs_2.m  demo_rbf_rr_2.m  demo_rbf_rt_1.m  demo_rbf_rt_2.m
orion3/rbf2/man/: intro.ps  manual.ps
orion3/rbf2/meth/: Contents.m  rbf_fs_2.m  rbf_rr_2.m  rbf_rt_1.m  rbf_rt_2.m
results/: summarize.py
scripts/: README  buildRun.sh  cal_time.py  mat_dims.txt  mat_dims_amped.ipynb  mat_dims_amped.py  run.sh
scripts/amped_scripts/: README  buildRun.sh  cal_time.py  mat_dims_ampedToDF.py  run.sh
search_scripts/: arch_GD_search.py  arch_GD_search_2.py  arch_GD_search_2_IB.py  arch_GD_search_2_IB_lp.py  arch_search.sh  dp_sweep.rslt  dp_sweep_SiIF.rslt  dp_sweep_SiIF.rslt_20runs  dp_sweep_SiIF.rslt_20runs_largedp  lp_sweep.rslt  lp_sweep_SiIF.rslt  parallel_test.py  result.txt  single_node_batch_sweep.rslt  single_node_batch_sweep_node2x.rslt  single_node_batch_sweep_node4x.rslt  test.txt  time_limit.sh
validation/benchmarks/: dist_gemm.py  dist_gemm_tf2.py  dist_gemm_tf2_v3.py  dist_gemm_tf2_v5.py  dist_gemm_tf2_v8.py  dist_gemm_tf2_v9.py
verilog/: matrix_multiply.v  vivado.jou  vivado_2170.backup.jou  vivado_2867.backup.jou  vivado_88689.backup.jou  vivado_89291.backup.jou  vivado_pid2170.str
verilog/project_1/: project_1.xpr
(+2489 files in other folders)
